# ultimate-ai-agent

./: .gitignore  CLAUDE.md  README.md
sources/ricable/Agentic-local/wasm/: Cargo.toml
sources/ricable/Agentic-local/wasm/runtime/: spin-hyperscale.rs
sources/ricable/Synaptic-Mesh/standalone-crates/synaptic-mesh-cli/: Cargo.toml
sources/ricable/Synaptic-Mesh/temp-publish/qudag-core/: Cargo.toml
sources/ricable/mlx-llamacpp-framework/: .gitignore  CLAUDE.md  README.md  pyproject.toml
sources/ricable/mlx-llamacpp-framework/data/: README.md
sources/ricable/mlx-llamacpp-framework/data/datasets/: quotes_train.jsonl  sample_training_data.jsonl  sample_training_data.txt  test.jsonl  train.jsonl  valid.jsonl
sources/ricable/mlx-llamacpp-framework/data/outputs/: adapters.safetensors  best_adapters.safetensors
sources/ricable/mlx-llamacpp-framework/data/results/: baseline_attention_benchmark.json  comprehensive_flash_attention_results.json  flash_enabled_results.json  llamacpp_comprehensive_test_results.json  mlx_flash_attention_benchmark.json  mlx_research.md  performance_benchmarks.md  plan.md  quantization_research.md  qwen_benchmark.json  qwen_chat_test_results.json  qwen_comprehensive_benchmark.json  swarm-research-distributed-1750351585910.json  tinyllama_benchmark.json
sources/ricable/mlx-llamacpp-framework/docs/: GETTING_STARTED.md  IMPLEMENTATION_OVERVIEW.md  README.md  contributing.md  getting-started.md  index.md  project-overview.md  website-structure.md
sources/ricable/mlx-llamacpp-framework/docs/frameworks/: framework-comparison.md  huggingface-guide.md  llama-cpp-guide.md  mlx-guide.md
sources/ricable/mlx-llamacpp-framework/docs/hardware/: hardware-recommendations.md  performance-optimization.md
sources/ricable/mlx-llamacpp-framework/docs/reports/: 8B_MODEL_COMPREHENSIVE_REPORT_20250620_140950.md  COMPREHENSIVE_MODELS_AND_PLATFORMS_COMPARISON.md  ENHANCED_FINETUNING_COMPARISON_REPORT.md  FINAL_8B_MODEL_COMPREHENSIVE_REPORT.md  FLASH_ATTENTION_COMPREHENSIVE_COMPARISON.md  FLASH_ATTENTION_QUANTIFIED_GAINS.md  METAL_FLASH_ATTENTION_INTEGRATION_COMPLETE.md  METAL_FLASH_ATTENTION_INTEGRATION_PLAN.md  MLX_COMPREHENSIVE_BENCHMARK_REPORT.md  MLX_ENHANCED_COMPREHENSIVE_BENCHMARK_REPORT.md  MLX_FINE_TUNING_REPORT.md  MODEL_COMPARISON_REPORT.md  PERFORMANCE_SUMMARY.md  PRACTICAL_FINETUNING_REPORT_20250620_141119.md  SCRIPT_COMPARISON_AND_IMPROVEMENTS.md
sources/ricable/mlx-llamacpp-framework/docs/use-cases/: chat-applications.md  fine-tuning-guide.md  inference-guide.md
sources/ricable/mlx-llamacpp-framework/examples/huggingface/: run_hf_inference.py  run_hf_lora_finetune.py  run_hf_quantization.py
sources/ricable/mlx-llamacpp-framework/examples/mlx/: run_mlx_finetune.py  run_mlx_finetune_flash_attention.py  run_mlx_finetune_improved.py  test_flash_attention_comparison.py
sources/ricable/mlx-llamacpp-framework/examples/workflows/: benchmark_comparison_workflow.sh  llamacpp_lora_workflow.sh  mlx_lora_workflow.py  mlx_qlora_workflow.py
sources/ricable/mlx-llamacpp-framework/scripts/: README.md  activate.sh  setup_environment.sh
sources/ricable/mlx-llamacpp-framework/src/flow2/: __init__.py
sources/ricable/mlx-llamacpp-framework/tests/: __init__.py  test_both_finetuned_models.py  test_finetuned_model.py  test_flash_attention_comparison.py  test_llamacpp_comprehensive.py  test_qwen_benchmark.py  test_qwen_chat.py
sources/ricable/mlx-llamacpp-framework/tools/: README.md  setup.py
sources/ricable/polyglot-devenv/dev-env/python/: claude-flow  devbox.json  pyproject.toml  test_example.py  test_format.py  test_hooks.py
sources/ricable/polyglot-devenv/dev-env/rust/: Cargo.toml  devbox.json
sources/ricable/ran-opt/: .gitignore  Cargo.toml  README.md  afm_correlate_demo  afm_correlate_demo.rs  build.rs  test_dtm_traffic.rs  validate_build.sh
sources/ricable/ran-opt/benches/: afm_detect_bench.rs  dtm_power_bench.rs  pfs_core_bench.rs  pfs_data_bench.rs  pfs_logs_bench.rs
sources/ricable/ran-opt/docs/: README.md
sources/ricable/ran-opt/docs/architecture/: overview.md  requirements.md
sources/ricable/ran-opt/examples/: afm_detection_example.rs  aos_heal_demo.rs  dtm_power_demo.rs  dtm_traffic_prediction.rs  neural_network_example.rs  pfs_core_complete.rs  pfs_data_demo.rs  pfs_logs_example.rs  pfs_twin_example.rs  policy_harmonization_demo.rs  ric_conflict_example.rs  ric_tsa_demo.rs
sources/ricable/ran-opt/src/: lib.rs  main.rs
sources/ricable/ran-opt/src/afm_detect/: mod.rs  (+3 more)
sources/ricable/ran-opt/tests/: aos_heal_integration_test.rs  pfs_data_integration_test.rs  pfs_logs_integration_test.rs  ric_conflict_tests.rs
sources/ricable/ruv-FANN/standalone_swarm_demo/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PFS_MIGRATION_SUMMARY.md  README_NEURAL_SWARM_IMPLEMENTATION.md  simple_analysis_results.json  simple_analysis_summary.md  simple_kpi_demo_report.json  swarm_analysis_results.json  swarm_coordination_report.md  swarm_optimization_results.json  swarm_results_summary.csv
sources/ricable/vibecast/rust-engine/: Cargo.toml
sources/ruvnet/agentic-preview/agentic_platform/: pyproject.toml
sources/ruvnet/auto-browser/auto-browser/: .env.example  README.md  auto-browser  config.yaml  install.sh  pyproject.toml  requirements.txt  setup.py  test_cli copy.sh  test_cli.sh
sources/ruvnet/daa/benchmarks/: .gitignore  BENCHMARKING_GUIDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  package.json
sources/ruvnet/hello_world_agent/agent/: README.md  __init__.py  crew.py  install.sh  main.py  pyproject.toml  robots.txt  sample.env  start.sh
sources/ruvnet/yyz-agentics-june/neuralflow/: MANIFEST.in  README.md  __init__.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
sources/spectredve/FANN/ranML/: CONFIGURATION_GUIDE.md  Cargo-wasm.toml  Cargo.toml  Cargo_processor.toml  DATA_ANALYSIS_REPORT.md  EVALUATION_SYSTEM_SUMMARY.md  PREPROCESSING_SETUP.md  README.md  build-wasm.sh  build.rs  config.yaml  data_processor.rs  evaluation_demo.rs  mps_trainer
sources/spectredve/Synaptic-Mesh/publish-ready/: Cargo.toml
(+6191 files in other folders)
