[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow2"
dynamic = ["version"]
description = "AI Model Training and Inference Toolkit with Flash Attention"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Claude Code Assistant", email = "noreply@anthropic.com"}
]
maintainers = [
    {name = "Claude Code Assistant", email = "noreply@anthropic.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "machine-learning", "mlx", "llama-cpp", "huggingface", "fine-tuning", "inference", "flash-attention", "mps", "accelerate", "tgi"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "torch>=1.12.0",
    "transformers>=4.35.0",
    "datasets>=2.0.0",
    "tqdm>=4.60.0",
    "psutil>=5.8.0",
    "safetensors>=0.3.0",
    "accelerate>=0.24.0",
    "peft>=0.6.0",
    "bitsandbytes>=0.41.0",
    "scipy>=1.7.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.12.0",
    "mlx-lm>=0.8.0",
]
llamacpp = [
    "llama-cpp-python>=0.2.0",
]
huggingface = [
    "accelerate>=0.24.0",
    "peft>=0.6.0",
    "bitsandbytes>=0.41.0",
    "text-generation>=0.6.0",
    "optimum>=1.14.0",
    "auto-gptq>=0.4.2",
    "flask>=2.3.0",
    "gradio>=3.40.0",
]
tgi = [
    "text-generation>=0.6.0",
    "requests>=2.28.0",
    "websockets>=11.0.0",
]
quantization = [
    "bitsandbytes>=0.41.0",
    "auto-gptq>=0.4.2",
    "optimum>=1.14.0",
    "awq>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
]
all = [
    "mlx>=0.12.0",
    "mlx-lm>=0.8.0",
    "llama-cpp-python>=0.2.0",
    "accelerate>=0.24.0",
    "peft>=0.6.0",
    "bitsandbytes>=0.41.0",
    "text-generation>=0.6.0",
    "optimum>=1.14.0",
    "auto-gptq>=0.4.2",
    "flask>=2.3.0",
    "gradio>=3.40.0",
    "awq>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
]

[project.scripts]
flow2 = "flow2.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/flow2"
Repository = "https://github.com/your-username/flow2"
Documentation = "https://flow2.readthedocs.io/"
"Bug Reports" = "https://github.com/your-username/flow2/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "flow2.__version__"}

[tool.setuptools.package-data]
flow2 = [
    "chat/docs/*.md",
    "performance/docs/*.md", 
    "utils/*.md",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["flow2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]