[package]
name = "hyperscale-agent"
version = "1.0.0"
edition = "2021"
description = "HyperScale AI Agent - WASM Runtime for SpinKube"
authors = ["Edge AI Team"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-sdk = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bytes = "1.0"
http = "0.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "agent_controller"
path = "runtime/spin-hyperscale.rs"
