[package]
name = "standalone_neural_swarm"
version = "0.2.0"
edition = "2021"
description = "Standalone Neural Swarm Optimization Platform for RAN Intelligence"
authors = ["Neural Swarm Team"]
license = "MIT"

[workspace]

[dependencies]
# Core dependencies
rand = { version = "0.8", features = ["std_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"], optional = true }
futures = "0.3"

# System and performance
num_cpus = "1.16"
rayon = "1.8"

# Math and neural networks
nalgebra = "0.32"
ndarray = "0.15"
statrs = "0.16"

# Logging and monitoring
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"

# Network and monitoring
reqwest = { version = "0.11", features = ["json"], optional = true }
dashmap = "5.5"
crossbeam = "0.8"

[features]
default = []
async = ["tokio"]
gpu = []
distributed = ["async"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
rstest = "0.18"

[[bin]]
name = "standalone_neural_swarm"
path = "src/main.rs"

[[bin]]
name = "real_kpi_neural_swarm_demo"
path = "src/bin/real_kpi_neural_swarm_demo.rs"

[[bin]]
name = "simple_kpi_demo"
path = "src/bin/simple_kpi_demo.rs"

[[bin]]
name = "simple_real_data_demo"
path = "src/bin/simple_real_data_demo.rs"

[[bin]]
name = "swarm_real_data_demo"
path = "src/bin/swarm_real_data_demo.rs"

[[bench]]
name = "swarm_benchmark"
harness = false
path = "benches/swarm_benchmark.rs"