[package]
name = "ericsson-ts-engine"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.16"
ndarray-stats = "0.6"
linfa = "0.7"
linfa-linear = "0.7"
linfa-reduction = "0.7"
smartcore = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
anyhow = "1.0"
thiserror = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
