[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hello_world"
version = "0.1.0"
authors = [
    { name = "QAM Team" },
]
description = "Hello World Agent for Quantum Agentic Agents"
requires-python = ">=3.8"
dependencies = [
    "crewai[local]>=0.1.0",  # Use local backend instead of ChromaDB
    "langchain>=0.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.24.0"
]