[workspace]
members = [
    "synaptic-qudag-core",
    "synaptic-neural-wasm",
    "synaptic-neural-mesh",
    "synaptic-daa-swarm",
    "synaptic-mesh-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["rUv <https://github.com/ruvnet>"]
repository = "https://github.com/ruvnet/Synaptic-Mesh"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ruvnet/Synaptic-Mesh"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"