[package]
name = "synaptic-mesh-cli"
version = "0.1.1"
edition = "2021"
authors = ["rUv <https://github.com/ruvnet>"]
description = "CLI library for Synaptic Neural Mesh - complete integration with Synaptic Market"
repository = "https://github.com/ruvnet/Synaptic-Mesh"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ruvnet/Synaptic-Mesh"
documentation = "https://docs.rs/synaptic-mesh-cli"
readme = "README.md"
keywords = ["cli", "neural", "mesh", "distributed", "marketplace"]
categories = ["command-line-interface", "science"]

[dependencies]
synaptic-qudag-core = "0.1"
synaptic-neural-wasm = "0.1"
synaptic-neural-mesh = "0.1"
synaptic-daa-swarm = "0.1"
claude_market = "0.1"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "synaptic_mesh_cli"
path = "src/lib.rs"

[[bin]]
name = "synaptic-mesh"
path = "src/bin/main.rs"
required-features = []