[project]
name = "polyglot-python"
version = "0.1.0"
description = "Python component of polyglot development environment"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic[email]",
    "httpx",
    "requests>=2.32.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "alembic>=1.16.2",
    "pyjwt>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.10.1",
    "pytest-asyncio>=1.0.0",
    "aiosqlite>=0.21.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.7.0", 
    "pytest>=7.4.0",
    "pytest-cov"
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
