[package]
name = "polyglot-rust"
version = "0.1.0"
edition = "2021"
description = "Rust component of polyglot development environment"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"