[package]
name = "pfs_genai"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }

# HTTP clients
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = { version = "1.5", features = ["full"] }

# Vector DB for semantic caching
qdrant-client = "1.10"

# Local inference
candle-core = "0.7"
candle-nn = "0.7"
candle-transformers = "0.7"
tokenizers = "0.20"

# Prompt compression
flate2 = "1.0"
lz4 = "1.25"

# Async utilities
tokio-stream = "0.1"
pin-project = "1.1"

# Metrics and monitoring
prometheus = "0.13"

# Cache serialization
bincode = "1.3"
blake3 = "1.5"