[package]
name = "ran-optimizer-llm"
version = "0.1.0"
edition = "2021"
description = "WASI-NN LLM agent for Ericsson RAN optimization automation"
authors = ["RuVector Team"]
license = "MIT"

[dependencies]
wasi-nn = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "ran-optimizer"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
