[workspace]
members = [
    "qudag-core",
    "ruv-fann-wasm", 
    "neural-mesh",
    "daa-swarm",
    "synaptic-mesh-cli",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Cryptography
blake3 = "1.5"
rand = "0.8"
rand_core = "0.6"
subtle = "2.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
hex = "0.4"

# Post-quantum cryptography
ml-dsa = "0.5"
ml-kem = "0.2"

# Networking
libp2p = { version = "0.53", features = [
    "tokio", "tcp", "dns", "noise", "yamux", "gossipsub", 
    "mdns", "kad", "identify", "ping", "relay", "dcutr",
    "autonat", "upnp", "websocket"
] }
multiaddr = "0.18"

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Data structures and concurrency
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"
lru = "0.12"
tokio-util = "0.7"

# Error handling and logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Performance and metrics
metrics = "0.21"
rayon = "1.8"

# Neural network math
ndarray = { version = "0.15", features = ["rayon"] }
num-traits = "0.2"

# WASM support
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console", "Performance", "Window", "Worker", "MessageChannel",
    "Gpu", "GpuAdapter", "GpuDevice", "GpuBuffer", "GpuCommandEncoder",
    "GpuComputePipeline", "GpuBindGroup", "GpuQueue"
] }
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }

# CLI
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

# Testing
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.8"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["rUv <https://github.com/ruvnet>"]
repository = "https://github.com/ruvnet/Synaptic-Neural-Mesh"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ruvnet/Synaptic-Neural-Mesh"
documentation = "https://docs.rs/"
readme = "README.md"
categories = ["algorithms", "science", "wasm", "concurrency"]
keywords = ["neural-network", "wasm", "p2p", "distributed", "ai"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
debug = false
overflow-checks = false

[profile.release-wasm]
inherits = "release"
opt-level = "s"  # Optimize for size in WASM
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
debug = true
opt-level = 0

[profile.bench]
debug = true
opt-level = 3