[package]
name = "synaptic-neural-wasm"
version = "0.1.0"
edition = "2021"
authors = ["rUv <https://github.com/ruvnet>"]
description = "WASM-optimized neural network engine for Synaptic Neural Mesh with SIMD acceleration"
repository = "https://github.com/ruvnet/Synaptic-Mesh"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ruvnet/Synaptic-Mesh"
documentation = "https://docs.rs/synaptic-neural-wasm"
readme = "README.md"
keywords = ["neural", "wasm", "simd", "ai", "mesh"]
categories = ["science", "wasm", "algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Math and arrays
ndarray = { version = "0.15", features = ["serde"] }
num-traits = "0.2"
rand = "0.8"

# WASM support
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["simd"]
simd = []
gpu = []