[package]
name = "daa-napi"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Node.js bindings for DAA Orchestrator using NAPI-rs"
repository = "https://github.com/ruvnet/daa"
homepage = "https://github.com/ruvnet/daa"
keywords = ["daa", "napi", "nodejs", "autonomous", "orchestrator"]
categories = ["api-bindings", "web-programming"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-rs core dependencies
napi = { version = "2", features = ["async", "tokio_rt"] }
napi-derive = "2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# DAA crates (all with economy, rules, and ai integrations)
daa-orchestrator = { version = "0.2.1", path = "..", features = ["economy-integration", "rules-integration", "ai-integration"] }
daa-rules = { version = "0.2.1", path = "../../daa-rules" }
daa-economy = { version = "0.2.1", path = "../../daa-economy" }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
