[package]
name = "prime-napi"
version = "0.2.1"
edition = "2021"
rust-version = "1.77"
authors = ["Prime Team"]
license = "MIT OR Apache-2.0"
description = "NAPI-rs bindings for Prime ML framework - Node.js bindings for federated learning"
repository = "https://github.com/example/prime-rust"
homepage = "https://github.com/example/prime-rust"
documentation = "https://docs.rs/prime-napi"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-rs core
napi = { version = "2.16", features = ["async", "tokio_rt", "serde-json"] }
napi-derive = "2.16"

# Prime crates - using published versions
daa-prime-core = "0.2.1"
daa-prime-trainer = "0.2.1"
daa-prime-coordinator = "0.2.1"
daa-prime-dht = "0.2.1"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Utilities
once_cell = "1.19"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
