[package]
name = "qudag-napi"
version = "0.1.0"
edition = "2021"
authors = ["rUv"]
license = "MIT"
description = "Native Node.js bindings for QuDAG quantum-resistant cryptography"
repository = "https://github.com/ruvnet/daa"
keywords = ["qudag", "quantum-resistant", "cryptography", "napi", "nodejs"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-rs core
napi = "2.16"
napi-derive = "2.16"

# Cryptography
blake3 = "1.5"
ml-kem = "0.2"
ml-dsa = "0.1.0-rc.2"
kem = "0.3.0-pre.0"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
hex = "0.4"
rand = "0.8"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
